--- a/hlo.html
+++ b/hlo.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
-    <p>this is a new feature...  </p>
+    <p>this is a new feature <list> </list></p>
     <h2>Updated Heading</h2>
 </body>
 </html>
